--- a/style.css
+++ b/style.css
@@ -344,7 +344,7 @@ h3 {
 h3:hover {
     color: #e3e3e3;
     transition: color .35s, -webkit-text-stroke-color .35s, -webkit-text-stroke-width .35s, text-shadow .35s;
-    text-shadow: 2px 2px 1px rgba(0, 0, 0, .4), 0 0 20px #42A5F5, 0 0 40px rgba(33, 150, 243, .75), 0 0 50px rgba(33, 150, 243, .75), 0 0 60px rgba(33, 150, 243, .75);
+    text-shadow: 2px 2px 1px rgb(0 0 0 / 40%), 0 0 20px #69f0ae, 0 0 40px rgb(0 230 118 / 75%), 0 0 50px rgb(0 230 118 / 75%), 0 0 100px rgb(0 230 118 / 75%);
 }
 
 #h3 {
@@ -639,12 +639,13 @@ button {
     text-decoration: none;
     line-height: 103px;
     margin: 0.5em;
-    background: #333;
+    background: rgb(51, 51, 51);
     border-radius: 50%;
     font-size: 40px;
-    color: #666;
+    color: #c2c2c2;
     cursor: pointer;
-    transition: .5s;
+    transition: all 0.5s ease 0s;
+    border-color: transparent;
 }
 
 #tooltip {
@@ -803,7 +804,7 @@ other {
 .fade-in {
     opacity: 0;
     /* make things invisible upon start */
-    animation: fadeIn ease-in 1;
+    animation: fadeIn ease-in 2s;
     animation-fill-mode: forwards;
     animation-duration: 4s;
 }
@@ -848,9 +849,6 @@ other {
     .about>#sub-heading {
         font-size: 1.2em;
     }
-    .contact>#heading {
-        font-size: 5em;
-    }
 }
 
 @media only screen and (max-width: 1400px) {
@@ -864,18 +862,18 @@ other {
     /*Tablets [601px -> 1200px]  large Phone*/
     #h1 {
         top: 46%;
-        left: 50%;
+        left: 45%;
         font-size: 6em;
     }
     #h2 {
-        top: 50%;
-        left: 57%;
+        top: 51%;
+        left: 60%;
         padding-left: 0em;
         font-size: 6em;
     }
     #h3 {
-        top: 55%;
-        left: 47%;
+        top: 56%;
+        left: 52%;
         font-size: 3em;
     }
     #h4 {
@@ -907,8 +905,14 @@ other {
     .about>#sub-heading {
         font-size: 1.2em;
     }
-    .contact>#heading {
-        font-size: 5em;
+    #reveal {
+        float: left;
+        padding: 20px;
+        border: 4px solid var(--ablazeAqua);
+        background: transparent;
+    }
+    #reveal a {
+        font-size: 1.6em;
     }
 }
 
